# Quant_Banana

./: .deploy-notes.md  .gitignore  README.md  README_DEPLOY.md  pyproject.toml  requirements.txt
backend/: __init__.py  main_runner.py
backend/ai/: ai_gateway.py  api_manager.py  decision_engine.py  prompt_manager.py  trade_memory.py
backend/api_clients/deepseek_client/: client.py
backend/api_clients/futu_client/: auth.py  client.py
backend/api_clients/hkma_client/: __init__.py  client.py
backend/api_clients/itick_client/: __init__.py  client.py
backend/api_clients/sina_client/: __init__.py  client.py
backend/api_clients/webull_client/: auth.py
backend/core/: __init__.py
backend/core/event_engine/: event_manager.py
backend/core/trading_engine/: order_manager.py  signal_fusion.py  strategy_runner.py
backend/strategies/: base_strategy.py
backend/strategies/strategy_library/technical/: intraday_vwap_reversion.py  ma_crossover_example.py  optimized_hk_intraday.py
backend/tests/: test_data_sources.py
backend/utils/: dingtalk_bot.py  formatters.py  trading_hours.py
backend/web_api/: main.py
config/secrets/: api-keys.yaml.example  secrets.yaml.example
config/settings/: base.yaml  base.yaml.example
config/trading-config/: risk-limits.yaml
docs/: trading-logic-analysis.md
docs/development/: setup-guide.md
docs/project-spec/: api-design.md  architecture.md
docs/user-manual/: runbook.md
examples/: basic_strategy.py
frontend/: ALPHA_ARENA_SETUP.md  STOCK_TRADING_UPDATE.md  index.html  package.json  vite.config.js
frontend/public/: README.md
frontend/src/: App.vue
frontend/src/assets/styles/: main.scss
frontend/src/components/: AccountChart.vue  CryptoPrices.vue  ModelCard.vue  ModelLeaderboard.vue
frontend/src/components/layouts/: NavBar.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  backtestService.js  stockService.js  strategyService.js  tradingService.js  websocketService.js
frontend/src/stores/: trading.js  user.js
frontend/src/views/: AlphaArena.vue  Blog.vue  Leaderboard.vue  Waitlist.vue
frontend/src/views/dashboard/: Dashboard.vue
requirements/: base.txt  dev.txt  research.txt
research/data_analysis/: market_analysis.ipynb
scripts/: deploy.sh  run_with_venv.sh
scripts/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
shared/types/: trading_types.py
src/: __init__.py
tests/unit/: test_strategies.py
